<resources>
    <string name="app_name">My Chating</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="have_no_account">Have No Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="enter_password">Password</string>
    <string name="phone">Phone</string>
    <string name="image">Select Image</string>
    <string name="image_profile">Select Image Profile</string>
    <string name="take_photo">Take Photo</string>
</resources>