<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="com.example.mychating.signup.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            style="@style/text_login"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/sign_up" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:orientation="vertical"
                tools:context=".login.LoginFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_select_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/action_settings"
                        android:src="@drawable/ic_photo"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/image_profile"
                        android:layout_width="150sp"
                        android:layout_height="150sp"
                        android:src="@drawable/blank_profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/text_signup"
                    android:hint="@string/full_name"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_name"
                        style="@style/text_field_style"
                        android:inputType="text"
                        android:text="@{signUpViewModel.fullName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/text_signup"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_email"
                        style="@style/text_field_style"
                        android:inputType="textEmailAddress"
                        android:text="@{signUpViewModel.emailAddress}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/text_signup"
                    android:hint="@string/phone"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_phone"
                        style="@style/text_field_style"
                        android:inputType="number"
                        android:text="@{signUpViewModel.phone}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/text_signup"
                    android:hint="@string/enter_password"
                    app:endIconMode="password_toggle"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_password"
                        style="@style/text_field_style"
                        android:inputType="textPassword"
                        android:text="@{signUpViewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/button_style"
            android:text="@string/sign_up" />

    </LinearLayout>


</layout>